isHosted : appear in CSV export